--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
-  "name": "minimal-blog",
-  "description": "Typography driven, feature-rich blogging theme with minimal aesthetics. Includes tags/categories support and extensive features for code blocks such as live preview, line numbers, and line highlighting.",
+  "name": "chenxi.dev",
+  "description": "Chenxi's dev notes site",
   "version": "1.3.12",
-  "author": "LekoArts <hello@lekoarts.de>",
+  "author": "Chenxi",
   "license": "0BSD",
   "starter-name": "gatsby-starter-minimal-blog",
   "scripts": {
